--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -26,7 +26,19 @@
         <% end %>
         <td><%= link_to book_path(book.id), class: "book_" + "#{book.id}" do %><%= book.title %><% end %></td>
         <td><%= book.body %></td>
-
+    <% if book.favorited_by?(current_user) %>
+   <td>
+      <%= link_to book_favorites_path(book), method: :delete do %>
+     ♥<%= book.favorites.count %>
+     <% end %>
+   </td>
+   <% else %>
+   <td>
+    <%= link_to book_favorites_path(book), method: :book do %>
+     ♡<%= book.favorites.count %>
+     <% end %>
+     <% end %>
+   </td>
         <td><%= link_to "#{book.book_comments.count} コメント", book_path(book) %></td>
          </tr>
       <% end %>
