--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -41,14 +41,14 @@
 </table>
 <% @book.book_comments.each do |book_comment| %>
  <% book_comment_user = book_comment.user %>
-<%= link_to user_path(book_comment_user), class: "user_#{book_comment_user.id}" do %>
-<%= attachment_image_tag @book_comment_user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %>
+<%= link_to user_path(book_comment.user), class: "user_#{book_comment_user.id}" do %>
+<%= attachment_image_tag book_comment.user, :profile_image, size: '40x40', class:"attachment user profile_image fallback" %>
    <%= book_comment.user.name %>
    <% end %>
     <%= book_comment.comment %>
-    <% if curretn_user == book_comment_user %>
+    <% if current_user == book_comment_user %>
    <% end %>
-
+  <% end %>
  <%= form_with(model:[@book, @book_comment], local: true) do |f| %>
    <%= f.text_area :comment %>
    <%= f.submit "送信" %>
