--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -20,6 +20,11 @@
        <th>introduction</th>
        <th><%= user.introduction %></th>
       </tr>
+      <% if current_user. following?(user) %>
+       <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+      <% else %>
+       <%= link_to "フォロー", user_relationships_path(user.id), method: :post %>
+      <% end %>
       </tbody>
       </table>
       <tr>
