--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -21,9 +21,9 @@
        <th><%= user.introduction %></th>
       </tr>
       <% if current_user. following?(user) %>
-       <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+       <%= link_to "フォロー外す", unfollow_path(user.id), method: :POST %>
       <% else %>
-       <%= link_to "フォロー", user_relationships_path(user.id), method: :post %>
+       <%= link_to "フォロー", follow_path(user.id), method: :POST %>
       <% end %>
       </tbody>
       </table>
