--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -20,13 +20,14 @@
        <th>introduction</th>
        <th><%= user.introduction %></th>
       </tr>
-      <% if current_user. following?(user) %>
-       <%= link_to "フォロー外す", unfollow_path(user.id), method: :POST %>
-      <% else %>
-       <%= link_to "フォロー", follow_path(user.id), method: :POST %>
-      <% end %>
       </tbody>
       </table>
+      <%= render 'relationships/followers', users: @users %>
+      <% if current_user. following?(user) %>
+       <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+      <% else %>
+       <%= link_to "フォロー", user_relationships_path(user.id), method: :POST %>
+      <% end %>
       <tr>
        <div class="row">
        <th><%= link_to edit_user_path(user.id), method: :get do %>
