--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -20,14 +20,17 @@
        <th>introduction</th>
        <th><%= user.introduction %></th>
       </tr>
+      <tr>
+       <th>follows</th>
+       <th><%= user.followings.count %></th>
+      </tr>
+      <tr>
+       <th>followers</th>
+       <th><%= user.followers.count %></th>
+      </tr>
       </tbody>
       </table>
-      <%= render 'relationships/followers', users: @users %>
-      <% if current_user. following?(user) %>
-       <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
-      <% else %>
-       <%= link_to "フォロー", user_relationships_path(user.id), method: :POST %>
-      <% end %>
+
       <tr>
        <div class="row">
        <th><%= link_to edit_user_path(user.id), method: :get do %>
