--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,6 +24,15 @@
    <td>
       <%= user.name %>
    </td>
+   <td>フォロー数: <%= user.followings.count %></td>
+    <td>フォロワー数: <%= user.followers.count %></td>
+   <td>
+    <% if current_user.following?(user) %>
+       <%= link_to "フォロー外す",user_relationships_path(user.id), method: :delete %>
+      <% else %>
+       <%= link_to "フォロー", user_relationships_path(user.id), method: :POST %>
+      <% end %>
+   </td>
    <td>
     <%= link_to "Show", user %>
    </td>
