--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,10 +27,12 @@
    <td>フォロー数: <%= user.followings.count %></td>
     <td>フォロワー数: <%= user.followers.count %></td>
    <td>
+    <% unless current_user == user %>
     <% if current_user.following?(user) %>
        <%= link_to "フォロー外す",user_relationships_path(user.id), method: :delete %>
       <% else %>
        <%= link_to "フォロー", user_relationships_path(user.id), method: :POST %>
+      <% end %>
       <% end %>
    </td>
    <td>
