--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -31,6 +31,14 @@
       </tr>
       </tbody>
       </table>
+      <% unless current_user == user %>
+     <% if current_user.following?(user) %>
+     <%= link_to "フォロー外す", user_relationships_path(user.id), class: 'btn btn-info',method: :delete %>
+     <% else %>
+     <%= link_to "フォロー", user_relationships_path(user.id), class: 'btn btn-success',method: :POST %>
+     <% end %>
+     <% end %>
+
       <tr>
        <div class="row">
        <th><%= link_to edit_user_path(user.id), method: :get do %>
