--- a/app/views/relationships/followers.html.erb
+++ b/app/views/relationships/followers.html.erb
@@ -10,7 +10,7 @@
   </tr>
 </thead>
 <tbody>
-  <% users.each do |user| %>
+  <% @users.each do |user| %>
   <tr>
     <td><%= user.name %></td>
     <td>フォロー数: <%= user.followings.count %></td>
