--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,6 +2,7 @@
 <%= render 'layouts/sidelist', book:@book, user:current_user %>
 
 <div class="col-md-8 offset-md-1">
+    <%= render 'searchs/form' %>
 <h2>Books</h2>
 
 <table class="table table-hover able-inverse">
