--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <%= render 'layouts/sidelist', book:@book_new, user:current_user %>
 <div class="col-md-8 offset-md-1">
-
+<%= render 'searchs/form' %>
 <h2>Users</h2>
 <table class="table table-hover">
  <thead>
