--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,6 @@
 <%= render 'layouts/sidelist', book:@book_new, user:@book.user %>
 <div class="col-md-8 offset-md-1">
+<%= render 'search/form'%>
 <h2>Book detail</h2>
 <table class="table">
 <tbody>
