--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,5 @@
 <%= render 'layouts/sidelist', book:@book_new, user:@book.user %>
 <div class="col-md-8 offset-md-1">
-<%= render 'search/form'%>
 <h2>Book detail</h2>
 <table class="table">
 <tbody>
@@ -20,18 +19,7 @@
      <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-success text-light" %></td>
      <td><%= link_to 'Destroy', @book, class: "btn btn-danger text-light", method: :delete, data: {confirm: "本当に削除しますか？"} %></td>
    <% end %>
-   <% if @book.favorited_by?(current_user) %>
-   <td>
-      <%= link_to book_favorites_path(@book), method: :delete do %>
-     ♥<%= @book.favorites.count %>
-     <% end %>
-   </td>
-   <% else %>
-   <td>
-    <%= link_to book_favorites_path(@book), method: :book do %>
-     ♡<%= @book.favorites.count %>
-     <% end %>
-     <% end %>
+   <%= render 'favorites/favorite-btn' %>
    </td>
    <td>
        コメント件数: <%= @book.book_comments.count %>
