--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -27,19 +27,9 @@
         <% end %>
         <td><%= link_to book_path(book.id), class: "book_" + "#{book.id}" do %><%= book.title %><% end %></td>
         <td><%= book.body %></td>
-    <% if book.favorited_by?(current_user) %>
-   <td>
-      <%= link_to book_favorites_path(book), method: :delete do %>
-     ♥<%= book.favorites.count %>
-     <% end %>
-   </td>
-   <% else %>
-   <td>
-    <%= link_to book_favorites_path(book), method: :book do %>
-     ♡<%= book.favorites.count %>
-     <% end %>
-     <% end %>
-   </td>
+        <div id="favorites_buttons_<%= @book %>">
+        <%= render partial: 'favorites/favorite-btn', locals: { book: book} %>
+        </div>
         <td><%= link_to "#{book.book_comments.count} コメント", book_path(book) %></td>
          </tr>
       <% end %>
