--- a/app/views/favorites/_favorite-btn.html.erb
+++ b/app/views/favorites/_favorite-btn.html.erb
@@ -1,12 +1,13 @@
-<% if @book.favorited_by?(current_user) %>
+<% if book.favorited_by?(current_user) %>
    <td>
       <%= link_to book_favorites_path(@book), method: :delete, remote: true do %>
-     ♥<%= @book.favorites.count %>
-     <% end %>
+      ♥<%= @book.favorites.count %>
+      <% end %>
    </td>
    <% else %>
    <td>
-    <%= link_to book_favorites_path(@book), method: :book, remote: true do %>
+    <%= link_to book_favorites_path(book), method: :book, remote: true do %>
      ♡<%= @book.favorites.count %>
      <% end %>
+    </td>
      <% end %>
