--- a/app/views/layouts/_sidelist.html.erb
+++ b/app/views/layouts/_sidelist.html.erb
@@ -21,6 +21,11 @@
        <th><%= user.introduction %></th>
       </tr>
       <tr>
+       <% if current_user != user %>
+       <th><%= link_to 'チャットを始める', chat_path(user.id) %></th>
+       <% end %>
+      </tr>
+      <tr>
        <th>follows</th>
        <th><%= link_to user.followings.count, user_followings_path(user.id) %>
        </th>
